--- a/flask/app/requirements.txt
+++ b/flask/app/requirements.txt
@@ -1,8 +1,8 @@
-uwsgi == 2.0.26
-flask == 3.0.3
-requests == 2.32.3
-apscheduler == 3.10.4
-pytz == 2024.1
+uwsgi >= 2.0.26
+flask >= 3.0.3
+requests >= 2.32.3
+apscheduler >= 3.10.4
+pytz >= 2024.1
 
 pymongo >= 4.8.0
 dnspython >= 2.6.1
