--- a/flask/supervisor/supervisord.conf
+++ b/flask/supervisor/supervisord.conf
@@ -1,8 +1,8 @@
 [supervisord]
-nodaemon=true
+nodaemon = true
 
 [program:nginx]
-command=/usr/sbin/nginx
+command = /usr/sbin/nginx
 
 [program:uwsgi]
-command =/usr/local/bin/uwsgi --ini  /var/www/app/uwsgi.ini
+command = /venv/bin/uwsgi --ini /var/www/app/uwsgi.ini
