--- a/gobgp/gobgpd.conf
+++ b/gobgp/gobgpd.conf
@@ -1,11 +1,11 @@
 [global.config]
-  as = 3701
-  router-id = "207.98.65.28"
+  as = 393577
+  router-id = "23.142.248.31"
 
 [[neighbors]]
   [neighbors.config]
-    neighbor-address = "207.98.64.254"
-    peer-as = 3701
+    neighbor-address = "23.142.248.1"
+    peer-as = 393577
     route-flap-damping = "True"
   [[neighbors.afi-safis]]
     [neighbors.afi-safis.config]
@@ -13,3 +13,17 @@
   [[neighbors.afi-safis]]
     [neighbors.afi-safis.config]
     afi-safi-name = "ipv6-unicast"
+
+
+[[neighbors]]
+  [neighbors.config]
+    neighbor-address = "2602:291::1"
+    peer-as = 393577
+    route-flap-damping = "True"
+  [[neighbors.afi-safis]]
+    [neighbors.afi-safis.config]
+    afi-safi-name = "ipv4-unicast"
+  [[neighbors.afi-safis]]
+    [neighbors.afi-safis.config]
+    afi-safi-name = "ipv6-unicast"
+
